@@ -1,4 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
+o Added support for log type bitmasks in log_vwrite(). Also replaced a fatal()
+  statement by an assert(0) to get rid of a possible infinite call loop when
+  passed an invalid log type. [Henri Doreau]
+
 o Added handling for the unexpected error WSAENETRESET (10052). This error is
   currently wrapped in the ifdef for WIN32 as there error appears to be unique
   to windows [Sean Rivera]
